# mltr

./: README.md  _branch_probe.txt  _please_stop.txt  pyproject.toml
.github/workflows/: ci.yml  (+2 more)
docs/: combined_ccoc_mltr_reviewer_audit.md  combined_ccoc_mltr_story_map.md  combined_manuscript_core.md  history_augmentation.md  master_theorem_proof.md  novelty_and_journal_strategy.md  paper_a_reference_audit.md  paper_a_theoretical_ecology_format_audit.md  paper_architecture.md  paper_results_discussion.md  path_coherence.md  plant_pollinator_worked_example.md  publication_completion_spine.md  rach_provenance.md  reproducibility.md  submission_analysis.md  submission_audit.md  submission_figure_specification.md  theorem_program.md  transport_defect.md
ext_transport/: __init__.py  conservative.py  defect_witnesses.py  exact.py  finite.py  history_augmentation.py  history_witnesses.py  macro.py  obstruction.py  path_transport.py  path_witnesses.py  refinement.py  relation_transport.py  witnesses.py
manuscript/: paper_a_main.tex  paper_a_supplement.tex  references.bib  supplement_algorithms.tex  supplement_examples.tex  supplement_preliminaries.tex  supplement_proofs.tex  supplement_reproducibility.tex
scripts/: render_submission_figures.py  verify_submission_story.py  verify_transport_core.py  write_submission_figure_data.py
tests/: test_history_augmentation.py  test_path_transport.py  test_render_submission_figures.py  test_reproducibility.py  test_submission_figure_data.py  test_submission_story.py  test_transport_defect.py  test_transport_theorems.py
